# Shoji

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: build_publish.yml
clip-savvy/: chrom_interval.py  create_sliding_windows.py  gene.py  gene2.py  gff3_parser.py  gff3_pyarrow_parser.py  interval.py  interval2.py  output.py  pyarrow_reader.py  tree.py
docs/: requirements.txt
docs/source/: conf.py  documentation.rst  index.rst  installation.rst  overview.rst
shoji/: __init__.py  bam_parser.py  cli.py  count.py  create_matrix.py  create_sliding_windows.py  gene.py  gff3_parser.py  helpers.py  map_to_id.py  output.py  pyarrow_reader.py  test_gff3_pyarrow_parser.py  tree.py
tests/: bam_parser_test.py  conftest.py  count_test.py  create_sliding_windows_test.py  gff3_parser_test.py
tests/data/: ENCFF511HSJ_chr1.bam  ENCFF511HSJ_chr1.bam.bai  basic.gff3  basic_output.bed  basic_windows_100_20.gz.tbi  intron_split.bed
tests/data/annotation/: basic_windows_100_20.gz.tbi
tests/data/counts/: deletion_regions.parquet  end_regions.parquet  middle_regions.parquet  start_regions.parquet
tests/data/xlinks/: ENCFF511HSJ_histones.bam  ENCFF511HSJ_histones.bam.bai
