[tool.poetry]
name = "clip-savvy"
version = "0.1.0"
description = "post process *clip reads after alignment. Replacement for htseq-clip"
authors = ["Sudeep Sahadevan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysam = "^0.22.1"
networkx = "^3.3"
cython = "^3.0.10"
numpy = "^1.26.4"
xopen = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
