[tool.poetry]
name = "shoji"
version = "0.7.6a18"
description = "post process *clip reads after alignment. Replacement for htseq-clip"
authors = ["Sudeep Sahadevan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysam = "^0.22.1"
cython = "^3.0.10"
numpy = "^1.26.4"
pyarrow = "^16.1.0"
sortedcontainers = "^2.4.0"
rich-click = "^1.8.3"
loguru = "^0.7.2"

[tool.poetry.scripts]
shoji = "shoji.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
